Use timeout instead of manually calculated limits for statistics